invites-tile: fixed on iphone 5

--- a/src/app/home/invites-tile/invites-tile.component.styl
+++ b/src/app/home/invites-tile/invites-tile.component.styl
@@ -12,3 +12,6 @@ p
         margin-left 5px
         color $main-theme-color
         font-size $sub-huge-font-size
+
+    @media only screen and (max-width: $iphone-5), only screen and (max-device-width: $iphone-5)
+        font-size $subheader-font-size
